[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/taskScript.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite1" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Sprite3" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Timer1" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="Timer3" type="Timer" parent="."]
wait_time = 5.0
autostart = true
[connection signal="timeout" from="Timer1" to="." method="_on_Timer1_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
